* Make generated cucumber.rake work with a vendored gem (Alex Rothenberg)
* Native support for ANSIColor on IronRuby via the iron-term-ansicolor gem (Will Green)
* Call a bunch of steps from step definitions - also with tables or pystrings. Copy-paste friendly (Bodaniel Jeanes, Jack Chen, Aslak Hellesøy) TODO - WIKI DOCUMENTATION BEFORE RELEASE

=== Bugfixes
* Define IRONRUBY correctly on Ruby 1.9 (Joe Van Dyk)
* RbStepDefinition#invoke calls #backtrace_line on self rather than @proc (#503 Mike Sassak)
* Avoid duplicate cucumber entries in database.yml (Daniel Hofstetter)
* Added respond_to? when checking config.cache_classes for older Rails versions (Jeremy Durham)

=== Changed Features
* $cucumber_interrupted is now Cucumber.wants_to_quit - avoid global variable, which gives warnings. (Aslak Hellesøy)
* Examples keyword without a colon is deprecated loudly. Gherkin will not recognize it at all. (Gherkin #30 Mike Sassak)

== 0.4.3 2009-10-28

The exciting thing about this release is that the wire protocol is starting to take shape. This means you can
now use Cucumber with .NET - writing step definitions in C#. And this is without having to use IronRuby at all!
See Cuke4Nuke (http://wiki.github.com/richardlawrence/Cuke4Nuke) for more information.

As usual there are several small features and bug fixes.

=== New Features
* Add support for ORing tags which are passed in with seperate --tag arguments. Make comma seperated tags use AND (#368 Joseph Wilk)
* New Wire Protocol - allowing out of process execution of Cucumber scenarios. (#428 Matt Wynne)
* Added an example illustrating how to get screenshots in HTML reports (examples/watir) (Aslak Hellesøy)
* Added new #embed(file, mime_type) method to visitors and Ruby Worlds to make it easier to embed screenshots (Aslak Hellesøy)
* The #announce method available from Ruby Step Definitions will print *after* the step is executed. (#487 Zoltan Penzeli)